// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BusMenuSelect renders a menu with a single route pattern 1`] = `
<DocumentFragment>
  <div
    class="m-schedule-direction__route-pattern notranslate"
  >
    Harvard via Allston 
  </div>
</DocumentFragment>
`;

exports[`BusMenuSelect renders a menu with multiple route patterns 1`] = `
<DocumentFragment>
  <div
    class="m-schedule-direction__route-pattern m-schedule-direction__route-pattern--clickable notranslate"
    role="button"
    tabindex="0"
  >
    Harvard via Allston 
    <span
      aria-hidden="true"
      class="notranslate c-svg__icon m-schedule-direction__route-pattern-arrow"
    >
      SVG
    </span>
  </div>
</DocumentFragment>
`;

exports[`ExpandedBusMenu renders a menu 1`] = `
<DocumentFragment>
  <div
    class="m-schedule-direction__menu"
    role="menu"
  >
    <div
      aria-current="page"
      class="m-schedule-direction__menu-item m-schedule-direction__menu--selected"
      id="route-pattern_66-6-0"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="m-schedule-direction__menu-item-headsign"
      >
        <div
          class="m-schedule-direction__checkmark"
        >
          <span
            aria-hidden="true"
            class="notranslate c-svg__icon"
          >
            SVG
          </span>
        </div>
        Harvard via Allston
      </div>
      <div
        class="m-schedule-direction__menu-item-description"
      >
        typical route
      </div>
    </div>
    <div
      class="m-schedule-direction__menu-item-spacer"
    >
      Uncommon destinations
    </div>
    <div
      class="m-schedule-direction__menu-item"
      id="route-pattern_66-B-0"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="m-schedule-direction__menu-item-headsign"
      >
        Watertown Yard via Union Square Allston
      </div>
      <div
        class="m-schedule-direction__menu-item-description"
      >
        School days only
      </div>
    </div>
  </div>
</DocumentFragment>
`;
